--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,14 @@ body {
   min-height: 100vh;
   background-color: #242424;
   color: white;
+  overflow: hidden;
+}
+#div {
+  width: 300px;
+  height: 200px;
+  background: url('./assets/bg.png') no-repeat;
+  background-size:100% 100%;
+  color: white;
+  padding: 20px;
+  font-size: 20px;
 }
