优化代码结构，添加高亮效果

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   overflow: hidden;
 }
 #div {
+  position: absolute;
   width: 300px;
   height: 200px;
   background: url('./assets/bg.png') no-repeat;
